[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.82"
syn = { version = "2.0.66", features = ["full", "parsing"] }
itertools = "0.12.1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
strum = "0.26.3"
tokio = { version = "^1.36", features = ["full"] }
